--- a/environments/build_indices_and_search.yml
+++ b/environments/build_indices_and_search.yml
@@ -1,4 +1,4 @@
-name: scaling
+name: build_indices_and_search
 channels:
   - defaults
   - conda-forge
@@ -408,7 +408,7 @@ dependencies:
   - xorg-libxdmcp=1.1.5
   - xorg-libxext=1.3.7
   - xorg-libxfixes=6.0.2
-  - xorg-libxi=1.8.2
+  - xorg-buillibxi=1.8.2
   - xorg-libxmu=1.3.1
   - xorg-libxrandr=1.5.5
   - xorg-libxrender=0.9.12
@@ -425,4 +425,3 @@ dependencies:
   - zipp=3.23.0
   - zlib=1.3.1
   - zstd=1.5.7
-prefix: /home/awang/miniconda3/envs/scaling
